feat : add stock check before checkout